# OPC

./: README.md
02_fnos-init/scripts/: claude.sh.template
05_OPC_CLI/: 05_OPC_CLI.md
07_Qwen3.6-27B/: report.html
opc-cli/: .gitignore  README.md  SKILL.md  pyproject.toml
opc-cli/dashboard/: DASHBOARD.md
opc-cli/dashboard/server/: index.html  nodemon.json  package-lock.json  package.json  server-api.js  server-prod.js  server.js  vite.config.js
opc-cli/dashboard/server/api/: cut.js
opc-cli/dashboard/server/services/cut/: asr.service.js  config.js  export.service.js  file.service.js  valley.service.js
opc-cli/dashboard/server/src/: App.vue  main.js
opc-cli/dashboard/server/src/api/: cut.js
opc-cli/dashboard/server/src/components/: LoadingOverlay.vue
opc-cli/dashboard/server/src/components/cut/: CutEditor.vue  SubtitleEditor.vue  Timeline.vue  Toolbar.vue  VideoPlayer.vue
opc-cli/dashboard/server/src/stores/: cut.js
opc-cli/dashboard/server/src/views/: CutEditor.vue  CutEditorView.vue  Docs.vue  Home.vue  Landing.vue
opc-cli/scripts/: opc.py
opc-cli/scripts/asr/: __init__.py  pipeline.py  qwen_asr_engine.py  subtitle_gen.py
opc-cli/scripts/cut/: __init__.py  analyze_for_editing.py  auto_app.py  server.py  valley_finder.py
opc-cli/scripts/shared/: config.py  model_path.py  platform.py
opc-cli/scripts/shared/device/: discover.py  dlna_player.py  player.py
opc-cli/scripts/tts/: __init__.py  edge_engine.py  qwen_engine.py
opc-cli/web/templates/: editor.html
opc-cli/website/: docs.html  index.html
