[project]
name = "opc-cli"
version = "0.2.0"
description = "OPC TTS & ASR CLI Tool with AirPlay/DLNA support"
requires-python = ">=3.10, <3.14"
dependencies = [
    # ── 通用依赖 (两平台通用) ──
    "edge-tts",
    "rich",
    "pyatv",
    "async-upnp-client",
    "soundfile",
    "numpy",
    "flask",
    "flask-cors",
    "modelscope",
    "huggingface_hub",

    # ── Linux + NVIDIA GPU (CUDA 12.4) ──
    "torch>=2.5.0,<2.10.0; sys_platform == 'linux'",
    "torchaudio>=2.5.0,<2.10.0; sys_platform == 'linux'",
    "qwen-tts; sys_platform == 'linux'",
    "qwen-asr; sys_platform == 'linux'",

    # ── macOS + Apple Silicon (MLX) ──
    "mlx-audio[stt,tts]>=0.4.0; sys_platform == 'darwin'",
]

[project.scripts]
opc = "scripts.opc:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.exclude-package-data]
"scripts.cut" = ["test_*.py"]
"scripts.asr" = ["test_*.py"]

[tool.uv]
extra-index-url = ["https://pypi.org/simple"]
override-dependencies = [
    "transformers>=4.57.0",
]

# Force PyTorch CUDA 12.4 index (Linux only)
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch", marker = "sys_platform == 'linux'" }
